# urban-sniffle

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  aeroapi_client.py  config.py  geo.py  main.py  map_image.py
scripts/: fetch_flights_map.py
tests/: test_aeroapi_client.py  test_geo.py  test_main.py  test_map_image_api.py  test_nearby_api.py
