[project]
name = "urban-sniffle-api"
version = "0.1.0"
description = "Nearby flights proxy for FlightAware AeroAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "httpx>=0.27.0,<1",
    "pydantic-settings>=2.6.0,<3",
    "python-dotenv>=1.0.0,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
