[project]
name = "aeroapi-nearby-flights"
version = "0.1.0"
description = "FastAPI backend for nearby flights via FlightAware AeroAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "httpx>=0.27.0,<1",
    "pydantic-settings>=2.6.0,<3",
    "uvicorn[standard]>=0.32.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
